clang/test/BSC/Negative/NullabilityCheck/owned_ptr_nullptr.cbs
// RUN: %clang_cc1 -verify %s

_Safe T *_Owned safe_malloc<T>(T t);
_Safe void safe_free(void *_Owned p);

_Safe void test1(void) {
    int *_Owned _Nullable p = nullptr;
    int cond = 1;
    if (cond) {
        p = safe_malloc<int>(10);
        *p = 10;
    }
    safe_free((void *_Owned)p); // expected-error {{cannot cast nullable pointer to nonnull type}}
}

_Safe void test2(void) {
    int *_Owned _Nullable p = nullptr;
    int cond = 1;
    if (cond) {
        p = safe_malloc<int>(10);
        *p = 10;
    }
    p = nullptr; // expected-error {{assign to _Owned value: `p`}}
}

_Safe int *_Owned _Nullable get_owned(int cond) {
    int *_Owned _Nullable p = nullptr;
    if (cond) {
        p = safe_malloc<int>(10);
    }
    return p;
}
_Safe void test3(void) {
    int *_Owned _Nullable p = get_owned(5);
    if (p != nullptr) {
        *p = 10;
    }
    safe_free((void *_Owned)p); // expected-error {{cannot cast nullable pointer to nonnull type}}
}